# stuff

move-s/: CMakeLists.txt  CMakePresets.json  README.md  links.MD  move_s.sln
move-s/benchmark/: CMakeLists.txt  benchmark.cpp  cool_v4.hpp  cool_v6.hpp  fixeds.hpp  xstr.hpp
move-s/move_s/: CMakeLists.txt  cool_v1.hpp  cool_v2.hpp  cool_v3.hpp  cool_v4.5.hpp  cool_v4.hpp  cool_v5.hpp  cool_v6.hpp  fixeds.hpp  move_s.cpp  move_s.vcxproj  over_match.cpp  over_match_old.cpp  xstr.hpp
